--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Movie Bookmark</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+    <string name="movie">Movie</string>
+    <string name="season">Season</string>
+    <string name="episode">Episode</string>
 </resources>
