--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="movie">Movie</string>
     <string name="season">Season</string>
     <string name="episode">Episode</string>
+    <string name="episode_name">Episode name</string>
 </resources>
