--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,10 @@
     <string name="tab_watching">Watching</string>
     <string name="tab_top_series">Top Series</string>
     <string name="movie">Movie</string>
-    <string name="season">Season</string>
     <string name="episode">Episode</string>
     <string name="episode_name">Episode name</string>
     <string name="movie_series_name">Movie/Series Name</string>
     <string name="season">Season</string>
     <string name="timestamp">Timestamp</string>
+    <string name="type">Type</string>
 </resources>
